--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
     the `--base-href` argument provided to `flutter build`.
   -->
 
-  <base href="https://sinnoor-c.github.io/eazyrooms-guest-web/">
-  <!-- <base href="https://eazyrooms.github.io/eazyrooms_guest/"> -->
+<!--   <base href="https://sinnoor-c.github.io/eazyrooms-guest-web/"> -->
+  <base href="https://eazyrooms.github.io/eazyrooms_guest/">
   <!-- <base href="https://guest.eazyrooms.com/"> -->
 <!--   <base href="/"> -->
   <meta charset="UTF-8">
