--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
   -->
 
   <!-- <base href="https://sinnoor-c.github.io/eazyrooms-guest-web/"> -->
-  <!-- <base href="https://eazyrooms.github.io/eazyrooms_guest/"> -->
+  <base href="https://eazyrooms.github.io/eazyrooms_guest/">
   <!-- <base href="https://guest.eazyrooms.com/"> -->
-  <base href="/">
+  <!-- <base href="/"> -->
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
   <meta name="description" content="EazyRooms">
@@ -40,7 +40,7 @@
   <link rel="manifest" href="manifest.json">
   <script>
     // The value below is injected by flutter build, do not touch.
-    var serviceWorkerVersion = "3525648497";
+    var serviceWorkerVersion = "408415882";
   </script>
   <!-- This script adds the flutter initialization JS code -->
   <script src="flutter.js" defer></script>
